# pychat.ai

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  UNIFIED_VISION.md  ai_assisted_python_repl_product_overview.md  mvn_plan.md  mvp.md  mvp_plan.md  plan1.md  plan3.md  plan4.md  plan5.md  pyaichat_mvp_overview.md  simplify-tools.md
.dex/: tasks.jsonl
.github/workflows/: ci.yml
docs/: README.md  architecture.md  build-python.md  command-reference.md  config-reference.md  contributing.md  user-guide.md
plans/: 09ir77fu-config-theme.md  caching.md  ci-python-version-phase2.md  ci-python-version-phase3.md  ci-python-version.md  test-gap.md  tests.md
scripts/dev/: checks-with-pinned-python.sh  pyo3-config-check.sh
scripts/python/: install-managed-python.sh  resolve-python.sh
src/: config.rs  lib.rs  main.rs
src/agent/: dispatch.rs  loop_impl.rs  mod.rs  prompt.rs
src/cli/: args.rs  commands.rs  mod.rs  repl.rs  theme.rs  timeline.rs
src/http/: client.rs  debug.rs  mod.rs
src/llm/: gemini.rs  mod.rs  provider.rs  system_prompt.md
src/python/: capabilities.rs  interpreter.rs  mod.rs  runtime_helpers.py
src/trace/: mod.rs
tests/: e2e_assistant.rs  e2e_repl.rs  e2e_smoke_python.rs  e2e_ui_smoke.rs  ui_rendering.rs
tests/ui_rendering/: common.rs  mod.rs  repl_key_flow_test.rs  (+2 more)
todos/: caching-llm.md  ci.md  close-testing-gaps.md  diet-prairie-159f.md  improve-ui.md  iron-laurel-8766.md  llm-token-cost.md  multiple-llm.md  pass-veridian-0f89.md  python-version.md  sessions.md  time-infrared-69e9.md  what-impala-50fd.md
(+7 files in other folders)
