[package]
name = "pyaichat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
expectrl = "0.7"
serial_test = "3"
tempfile = "3"
wiremock = "0.6"
