[package]
name = "pychat_ai"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
test-support = []

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dotenvy = "0.15"
dirs = "6"
pyo3 = { version = "0.28", features = ["auto-initialize"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
expectrl = "0.7"
insta = "1"
serial_test = "3"
tempfile = "3"
wiremock = "0.6"
